syntax = "proto3";

package com.example.gateway.domain;

message DoNothingTwice {}
