syntax = "proto3";

package com.example.gateway.domain;

import "com/example/gateway/domain/gateway_domain_objects.proto";

import "scalapb/scalapb.proto";

message SendLoginLinkResponse {
    // NOTE: This will be blank in production!
    string login_token_for_test_only = 1;
}

message DoNothingTwiceResponse {
    DoNothingTwice value = 1;
}

message CompleteLoginResponse {
    string redirect_uri = 1;
    string csrf_token = 2;
    string jwt_token = 3;
    AppIdentity identity = 4 [(scalapb.field).required = true];
}

message AppIdentity {
    string sub = 1;
    string name = 2;
    string preferred_name = 3;
    string family_name = 4;
    string given_name = 5;
    string middle_name = 6;
    string email = 7;
}
